Add GitHub friendly plugins; Update highlighter

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
 name: Hypothes.is Project
 markdown: redcarpet
-pygments: true
+highlighter: pygments
+gems:
+  - jekyll-mentions
+  - jekyll-redirect-from
+  - jekyll-sitemap
+  - jemoji
