Implement Herring Cove template
Rather modified copy of the MIT-licensed Herring Cove
Jekyll template available at:
https://github.com/arnp/herring-cove

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,9 @@
 name: Hypothes.is Project
 markdown: redcarpet
 highlighter: pygments
+github: http://www.github.com/hypothesis
+twitter: http://www.twitter.com/hypothes_is
+linkedin: https://www.linkedin.com/company/hypothes.is
 gems:
   - jekyll-mentions
   - jekyll-redirect-from
