Change site.name to site.title
HTML has no notion of name. I kept typing site.title.

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: Hypothes.is Project
+title: Hypothes.is Project
 markdown: redcarpet
 highlighter: pygments
 github: http://www.github.com/hypothesis
