Meh. Host resolved to 0.0.0.0; Add domain

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,8 @@ description: an open platform for the collaborative evaluation of knowledge
 author: The Hypothes.is Project
 email: dev@hypothes.is
 
+domain: project.hypothes.is
+
 markdown: redcarpet
 highlighter: pygments
 github: http://www.github.com/hypothesis
