Revert "Remove plugins from config"
This reverts commit 6bcc27541283692b159170102f2061f6ec40928a.

GitHub Pages *does* use these plugins:
https://help.github.com/articles/using-jekyll-plugins-with-github-pages/#configuring-jekyll

/me glares at @aron across the internets. :wink:

--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,16 @@ title: Hypothes.is Project
 description: an open platform for the collaborative evaluation of knowledge
 author: The Hypothes.is Project
 email: dev@hypothes.is
-baseurl:
 
 domain: project.hypothes.is
 
-markdown: kramdown
+markdown: redcarpet
 highlighter: pygments
 github: http://www.github.com/hypothesis
 twitter: http://www.twitter.com/hypothes_is
 linkedin: https://www.linkedin.com/company/hypothes.is
+gems:
+  - jekyll-mentions
+  - jekyll-redirect-from
+  - jekyll-sitemap
+  - jemoji
