Put kramdown back

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ email: dev@hypothes.is
 
 domain: project.hypothes.is
 
-markdown: redcarpet
+markdown: kramdown
 highlighter: pygments
 github: http://www.github.com/hypothesis
 twitter: http://www.twitter.com/hypothes_is
